--- a/top.css
+++ b/top.css
@@ -125,7 +125,7 @@
      transform: translateY(-12px) rotate(135deg);
   }
      .nav-icon:hover div {
-         scale:0
+        transform: scale(0);
      }
       
       
