--- a/top.css
+++ b/top.css
@@ -121,7 +121,7 @@
      transform: translateY(-12px) rotate(135deg);
   }
      .nav-icon:hover div {
-        transform: scale(0);
+        transform: scaleY(0);
      }
       
       
